# unreal_objects

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agents.md  discovery.md  plan.md  pyproject.toml  status.md
.claude/agents/: code-excellence.md  day-closing.md
changelog/: changelog_2026-03-16.md  changelog_2026-03-18.md  changelog_2026-03-22.md  changelog_2026-03-23.md  changelog_2026-03-28.md  changelog_2026-04-08.md  changelog_2026-04-12.md  changelog_2026-04-13-2.md  changelog_2026-04-13.md
company_server/: app.py  cli.py  clock.py  config.py  scheduler.py  state.py  webhooks.py
company_server/tests/: test_ai_generator.py  test_app.py  test_clock.py  test_generator.py  test_scheduler.py  test_state.py
data/: agent_auth.json  test_agent_auth_tmp.json  test_agent_auth_tmp2.json  test_agent_auth_tmp3.json
decision_center/: app.py  cli.py  evaluator.py  models.py  schema_generator.py  store.py  translator.py
decision_center/stress_test/: __init__.py  artifacts.py  cli.py  dataset.py  evaluation.py  models.py  reporting.py  schema_registry.py  translation.py
decision_center/tests/: test_api.py  test_cli.py  test_evaluator.py  test_models.py  test_store.py  test_stress_test_cli.py  test_translator.py
docker/: combined_backend.Dockerfile  decision_center.Dockerfile  mcp.Dockerfile  rule_engine.Dockerfile  tool_agent.Dockerfile  ui-nginx.conf  ui.Dockerfile
docs/: cli-wizard.md  connecting-agents.md  deployment-railway.md  diary.md  evaluation.md  event-schema.md  react-ui.md  rule-engine.md
evals/: agent_eval_report_v1.md  agent_eval_report_v2.md  agent_eval_report_v3.md  agent_eval_report_v4.md  agent_eval_report_v5.md  agent_eval_report_v6.md  create_sync_log.txt  eval_output_raw.txt  eval_output_raw_2.txt  eval_output_raw_3_sync.txt  eval_output_raw_4.txt  eval_output_raw_5.txt  eval_output_raw_6.txt  generative_evaluation_report_v1.md  generative_evaluation_report_v2.md  generative_evaluation_report_v3.md  generative_evaluation_report_v4.md  generative_evaluation_report_v5.md  generative_evaluation_report_v6.md
evals/agent_eval/: agent.py  cli.py  models.py  receipt.py  reporting.py  runner.py
evals/agent_eval/scenarios/: ecommerce.py  finance.py  generated.py
evals/agent_eval/tests/: test_agent.py  test_cli.py  test_models.py  test_receipt.py  test_reporting.py  test_runner.py  test_scenarios.py
evals/artifacts/finance/: batch_results.jsonl  eval_output_raw.txt  llm_test_dataset.json
mcp_server/: admin_cli.py  auth.py  server.py  tool_agent.py
mcp_server/tests/: test_admin_cli.py  test_auth.py  test_code_validation.py  test_tools.py
rule_engine/: app.py  models.py  store.py
rule_engine/tests/: test_api.py  test_models.py  test_store.py
rule_packs/: support_company.json
schemas/: conflict_test.json  ecommerce.json  finance.json  high_value_global_box_shipment.json  test_schema.json
scripts/: start_backend_stack.sh
scripts/stress_test/: batch_1_create_sync.py  batch_3_evaluate.py  batch_results.jsonl  generate_llm_dataset_sync.py  generate_quality_rules.py  llm_test_dataset.json  quality_rules_data.json  quality_test.py  run_quality_chaos.py
shared/: combined_app.py  middleware.py  persistence.py  sanitize.py
spec/MVP/: discovery.md
support_company/: ai_generator.py  generator.py  models.py  prompts.py
tests/: test_dev_scripts.py  test_integration.py  test_persistence.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.test.tsx  App.tsx  AppSource.test.ts  api.test.ts  api.ts  index.css  types.ts
ui/src/components/: AgentAdminPanel.test.tsx  AgentAdminPanel.tsx  ChatInterface.test.tsx  ChatInterface.tsx  Dashboard.tsx  DatapointConfigurator.tsx  DecisionLog.tsx  RuleLibrary.tsx  Sidebar.tsx  (+4 more)
(+2 files in other folders)
