[project]
name = "unreal_objects"
version = "0.1.0"
description = "Accountability infrastructure for autonomous systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "google-genai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "rule_engine/tests",
    "decision_center/tests",
    "mcp_server/tests",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "rule_engine",
    "decision_center",
    "mcp_server"
]
